# goit_py_web_hw_7

./: .gitignore  alembic.ini  config.ini  crud.py  description.py  main.py  pyproject.toml  seed.py  selects.py
migrations/: env.py
migrations/versions/: 0522504f88f3_initial_migration.py  0b9c622a987b_initial_migration.py  0e4004651267_init.py  171c8ba8b7d2_initial_migration.py  36169819043f_initial_migration.py  4ea16024c403_initial_migration.py  bdff0295a26e_initial_migration.py  cfeb55fb55ae_initial_migration.py
src/: db.py  models.py
