[tool.poetry]
name = "goit-py-web-hw-7"
version = "0.1.0"
description = ""
authors = ["kubitskyi <fenixm22@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_py_web_hw_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
faker = "^18.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
