[tool.poetry]
name = "goit-py-web-hw-7"
version = "0.1.0"
description = ""
authors = ["Yaroslav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
